--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ subjects:
 - !lcsh 'South Africa -- Fiction'
 - !lcc 'PR'
 - !lcsh 'Adventure stories'
+- GITenberg
 title: 'Diamond Dyke
 
   The Lone Farm on the Veldt - Story of South African Adventure'
